--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,6 +11,16 @@
 </p>
 
 <p>
+  <strong>Location:</strong>
+  <%= @article.location %>
+</p>
+
+<p>
+  <strong>Exerpt:</strong>
+  <%= @article.exerpt %>
+</p>
+
+<p>
   <strong>Published at:</strong>
   <%= @article.published_at %>
 </p>
