--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |f| %>
+<%= simple_form_for(@article) do |f| %>
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -11,13 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
+  <%= f.input :title, label: 'Enter title of article:', input_html: {class: "form-control", placeholder: 'title'}%>
+
   <div class="field">
     <%= f.label :body %><br>
     <%= f.text_area :body %>
+  </div>
+  <div class="field">
+    <%= f.label :location %><br>
+    <%= f.text_field :location %>
+  </div>
+  <div class="field">
+    <%= f.label :exerpt %><br>
+    <%= f.text_field :exerpt %>
   </div>
   <div class="field">
     <%= f.label :published_at %><br>
