--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th>Location</th>
+      <th>Exerpt</th>
       <th>Published at</th>
       <th colspan="3"></th>
     </tr>
@@ -17,6 +19,8 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.body %></td>
+        <td><%= article.location %></td>
+        <td><%= article.exerpt %></td>
         <td><%= article.published_at %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
