--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,6 +15,7 @@
   </thead>
 
   <tbody>
+    <%= article = Article.find(1) %>
     <% @articles.each do |article| %>
       <tr>
         <td><%= article.title %></td>
